# 3HDKRender

./: .gitignore  3HDKRender_MSVC.sln  3HDKRender_msvc.sln  CMakeLists.txt  README.md
ext/tiny_obj_loader/: tiny_obj_loader.h
src/: main.cpp  scene.cpp  scene.h
src/render/: geometry.h  mesh.h  model.cpp  model.h
src/utils/: camera.h  tiny_obj_loader.cpp
utils/: Shader.h  camera.h
